// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoiCitationView test  should render component with doi 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction],
      "subscribe": [MockFunction],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <DoiCitationView
        doi="10.121212/lskdjflsdjf"
      >
        <ExternalLink
          aria-label="Open this DOI in an new window"
          className="citationDoiLink"
          href="https://doi.org/10.121212/lskdjflsdjf"
          openInNewIcon={true}
          rel="noopener noreferrer"
          target="_blank"
          title="Open this DOI in an new window"
        >
          <a
            aria-label="Open this DOI in an new window"
            className="citationDoiLink externalLink showIcon"
            href="https://doi.org/10.121212/lskdjflsdjf"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Open this DOI in an new window"
          >
            https://doi.org/10.121212/lskdjflsdjf
          </a>
        </ExternalLink>
      </DoiCitationView>
    </Router>
  </MemoryRouter>
</Provider>
`;

exports[`DoiCitationView test  should render component with empty span 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction],
      "subscribe": [MockFunction],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <DoiCitationView>
        <span
          className="citationDOI empty"
        />
      </DoiCitationView>
    </Router>
  </MemoryRouter>
</Provider>
`;
